[package]
name = "cade"
version = "0.2.3"
edition = "2021"

[[bin]]
name = "cade"
path = "src/wrapper/main.rs"

# [lib]
# name = "common"
# path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.194", features = ["derive"] }
config = "0.13.4"
blake3 = "1.5.0"
lz4 = "1.24.0"
zstd = "0.13.0"
pathdiff = "0.2.1"
redis = "0.25.2"

# needed for profiling
[profile.release]
debug = true

